[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathbuster"
version = "0.1.1"
authors = [
  { name="Vladimir Sopernikov" },
]
description = "PathBuster - multiple hosts Web path scanner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/rivalsec/pathbuster"
"Bug Tracker" = "https://github.com/rivalsec/pathbuster/issues"

[project.scripts]
pathbuster = "pathbuster.pathbuster:main"